src/test/ui/impl-trait/issue-86465.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/issue-86465.rs:6:5
   |
LL |     (a, a)
   |     ^^^^^^
   |     |
   |     expected `&'a u32`, got `&'b u32`
   |     this expression supplies two conflicting concrete types for the same opaque type

error: aborting due to previous error

